Fixed a visibility issue on the contact page

--- a/css/contact.css
+++ b/css/contact.css
@@ -121,6 +121,7 @@ li {
 }
 .contact {
     left: 5%;
+    margin-bottom: 270px;
 }
 
 footer {
